<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="132dp"
    android:weightSum="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/upload"
        android:id="@+id/textView19"
        android:layout_weight="1"
        android:textSize="60dip"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/download"
        android:id="@+id/textView20"
        android:layout_weight="1"
        android:textSize="60dip"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/read"
        android:id="@+id/textView21"
        android:layout_weight="1"
        android:textSize="60dip"
        android:gravity="center" />

</LinearLayout>
    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/webview"
        ></WebView>
</LinearLayout>