<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.cfgb.quorefox.MainActivity"
    android:weightSum="3"
    android:gravity="center">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/a"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/id"
                android:id="@+id/textView"
                android:textSize="60dip"
                android:layout_gravity="center"
                android:textColor="#f2710e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RESUME"
                android:id="@+id/textView10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/b"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/newjobs"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:textSize="60dip"
                android:textColor="#f2710e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PERMENANT ADDRESS"
                android:id="@+id/textView11"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/c"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/resumee"
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:textSize="60dip"
                android:textColor="#f2710e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PHOTO"
                android:id="@+id/textView12"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/d"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/resume"
                android:id="@+id/textView4"
                android:textSize="60dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RESUME"
                android:id="@+id/textView13"
                android:textColor="#f2710e"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/e"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/newjobs"
                android:id="@+id/textView5"
                android:layout_gravity="center"
                android:textSize="60dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IDENTITY PROOF"
                android:id="@+id/textView14"
                android:textColor="#f2710e"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/f"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/resume"
                android:id="@+id/textView6"
                android:layout_gravity="center"
                android:textSize="60dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADDRESS"
                android:id="@+id/textView15"
                android:textColor="#f2710e"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/g"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/id"
                android:id="@+id/textView7"
                android:layout_gravity="center"
                android:textIsSelectable="false"
                android:textSize="60dip"
                android:textColor="#f2710e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PASSPORT PHOTO"
                android:id="@+id/textView16"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/h"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/id"
                android:id="@+id/textView8"
                android:layout_gravity="center"
                android:textSize="60dip"
                android:textColor="#f2710e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID PROOF"
                android:id="@+id/textView17"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/i"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/resume"
                android:id="@+id/textView9"
                android:layout_gravity="center"
                android:textSize="60dip"
                android:textColor="#f2710e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADDRESS"
                android:id="@+id/textView18"
                android:foregroundGravity="center"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
